feat: header component v1

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@
   --light-color: #777;
   --box-shadow: 0.5rem 0.5rem 0 rgba(25, 119, 204, 0.2);
   --text-shadow: 0.4rem 0.4rem 0 rgba(0, 0, 0, 0.2);
-  --border: 0.2rem solid var(--blue);
+  --light-border: 1px solid var(--blue);
+  /* --border: 0.2rem solid var(--blue); */
+  --border: 3px solid var(--blue);
 }
 
 * {
